modified main page and added statuc pages

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,14 +2,22 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="col">
+                        <h4>Company</h4>
+                        <a href="/home/index">Home</a><br/>
+                        <a href="#">About</a><br/>
+                        <a href="#">Contact</a><br/>
+                        <a href="#">Team</a><br/>
+                        <a href="#">Careers</a><br/>
+
                        <h4>Contact us</h4>
                        <ul>
-                            <li>5th Avenue, New York - United States</li>
-                            <li>Phone: +10 724 1234 567 | Fax: +10 724 1234 567 </li>
-                            <li>Email: <a href="mailto:hello@example.com" title="Email Us">hello@example.com</a></li>
-                            <li>Skype: <a href="skype:my.business?call" title="Skype us">my-business</a></li>
-                            <li>Creating great templates is our passion</li>
+                            <li>15550-D Rockfield Blvd. Irvine, CA 92618 - United States</li>
+                            <li>Email: <a href="mailto:info@changefindr.com" title="Email Us">info@changefindr.com</a></li>
+                            
                         </ul>
+
+
+
                      </div>
                 </div>
                 
@@ -29,26 +37,26 @@
                 </div>
                 
                 <div class="col-md-3">
+
+                     <h4>Need Help</h4>
+                        <a href="/faq/index">FAQ</a><br/>
+                        <a href="#">Terms and Conditions</a><br/>
+                        <a href="#">Privacy Policy</a><br/>
                     <div class="col col-social-icons">
                         <h4>Follow us</h4>
                         <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-skype"></i></a>
-                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                        <a href="#"><i class="fa fa-youtube-play"></i></a>
-                        <a href="#"><i class="fa fa-flickr"></i></a>
                     </div>
+                   
                 </div>
 
                  <div class="col-md-3">
                     <div class="col">
                         <h4>About us</h4>
                         <p class="no-margin">
-                        Boomerang MultiPurpose Template is a multi-solution product made with simplicity in mind so you can benefit as much as possible from it.
+                        DONATE YOUR UNUSED GIFT CARDS TO A WORTHY CAUSE.  We are passionate about helping causes achieve their goals.
                         <br><br>
-                        <a href="#" class="btn btn-block btn-base btn-icon fa-check"><span>Try it now</span></a>
+                        <a href="/cause/index" class="btn btn-block btn-base btn-icon fa-credit-card"><span>Donate To A Cause</span></a>
                         </p>
                     </div>
                 </div>
@@ -57,14 +65,10 @@
             <hr>
             
             <div class="row">
-                <div class="col-lg-9 copyright">
-                    2014 © Web Pixels. All rights reserved.
-                    <a href="#">Terms and conditions</a>
+                <div class="col-lg-12 copyright">
+                    <%= Time.now.year %> © Sun MicroSolutions Inc. All rights reserved.
+                    
                 </div>
-                <div class="col-lg-3">
-                    <a href="http://www.webpixels.ro" title="Made with love by Web Pixels" target="_blank" class="">
-                        <img src="/images/webpixels-footer-logo.png" alt="Web Pixels - Designing Forward | Logo" class="pull-right">
-                    </a>
-                </div>
+                
             </div>
         </div>
