--- a/app/views/layouts/_slidebar.html.erb
+++ b/app/views/layouts/_slidebar.html.erb
@@ -26,43 +26,51 @@
         </div>
     </form>
     
-    <h5 class="side-section-title">Optional sidebar menu</h5>
+    <h5 class="side-section-title">Changefindr</h5>
     <div class="nav">
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a href="/home/index">Home</a>
             </li>
             <li>
-                <a href="#">About us</a>
+                <a href="/aboutus/index">About us</a>
             </li>
             <li>
-                <a href="#">Blog</a>
+                <a href="/faq/index">FAQ</a>
             </li>
             <li>
-                <a href="#">Work</a>
+                <a href="/termsconditions/index">Terms and Conditions</a>
             </li>
             <li>
-                <a href="#">Online shop</a>
+                <a href="/privacypolicy/index">Privacy Policy</a>
             </li>
+            <li>
+                <a href="/team/index">Team</a>
+            </li>
+            <li>
+                <a href="/contact/index">Contact</a>
+            </li>
+            <li>
+                <a href="/careers/index">Careers</a>
+            </li>
+            
         </ul>
     </div>
     
     <h5 class="side-section-title">Social media</h5>
     <div class="social-media">
         <a href="#"><i class="fa fa-facebook facebook"></i></a>
-        <a href="#"><i class="fa fa-google-plus google"></i></a>
         <a href="#"><i class="fa fa-twitter twitter"></i></a>
     </div>
     
     <h5 class="side-section-title">Contact information</h5>
     <div class="contact-info">
         <h5>Address</h5>
-        <p>5th Avenue, New York - United States</p>
+        <p>15550-D Rockfield Blvd. Irvine, CA 92618 - United States</p>
         
         <h5>Email</h5>
-        <p>hello@webpixels.ro</p>
+        <p>info@changefindr.com</p>
         
-        <h5>Phone</h5>
-        <p>+10 724 1234 567</p>
+        
     </div>
 </section>
