modified login, edit cause

--- a/app/views/aboutus/index.html.erb
+++ b/app/views/aboutus/index.html.erb
@@ -13,8 +13,14 @@
         <div class="wp-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-7">
+                        <br/><br/><br/><br/>
                         <p>Many nonprofits and charities love gift cards because they are easier to control spending than cash and more flexible than physical goods. However, these organizations do not have the network nor the capacity to generate significant fundraising with gift cards. That's where Changefindr comes in. We provide all the collection, aggregation and conversion to cash. That way, they can focus on what they do best: helping others. </p>
+                    </div>
+                     <div class="col-md-5">
+                        
+                            <img src="/images/prv/col-img-7.jpg" class="img-responsive"/>
+                       
                     </div>
                     
                 </div>
