--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -124,7 +124,7 @@
                                 <div class="dropdown-form">
                                     <form class="form-horizontal form-light p-15" role="form">
                                         <div class="input-group">
-                                            <input type="text" class="form-control" placeholder="Search For A Cause">
+                                            <input type="text" id="searchcausemain" class="form-control" placeholder="Search For A Cause">
                                             <span class="input-group-btn">
                                                 <button class="btn btn-base" type="button">Go</button>
                                             </span>
