--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -302,7 +302,11 @@
                 </div>
                 <div class="row">
                     
-                    <div class="col-md-6 col-sm-6 col-xs-6">
+                    <div class="col-md-3 col-sm-3 col-xs-3 visible-lg visible-md">
+                        
+                    </div>
+
+                    <div class="col-md-3 col-sm-3 col-xs-3">
                         <div class="client">
                             <a href="http://www.faststartstudio.com/" target="_blank">
                                 <img src="/images/faststart_logo.png" alt="">
@@ -310,12 +314,18 @@
                         </div>
                     </div>
                    
-                     <div class="col-md-6 col-sm-6 col-xs-6">
+                  
+
+                     <div class="col-md-3 col-sm-3 col-xs-3">
                         <div class="client">
                             <a href="http://fi.co/" target="_blank">
                                 <img src="/images/FI_logo.png" alt="">
                             </a>
                         </div>
+                    </div>
+
+                     <div class="col-md-3 col-sm-3 col-xs-3 visible-lg visible-md">
+                        
                     </div>
                     
                 </div>
