added some pages

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,9 +4,9 @@
                     <div class="col">
                         <h4>Company</h4>
                         <a href="/home/index">Home</a><br/>
-                        <a href="#">About</a><br/>
-                        <a href="#">Contact</a><br/>
-                        <a href="#">Team</a><br/>
+                        <a href="/aboutus/index">About</a><br/>
+                        <a href="/contact/index">Contact</a><br/>
+                        <a href="/team/index">Team</a><br/>
                         <a href="#">Careers</a><br/>
 
                        <h4>Contact us</h4>
@@ -40,8 +40,8 @@
 
                      <h4>Need Help</h4>
                         <a href="/faq/index">FAQ</a><br/>
-                        <a href="#">Terms and Conditions</a><br/>
-                        <a href="#">Privacy Policy</a><br/>
+                        <a href="/termsconditions/index">Terms and Conditions</a><br/>
+                        <a href="/privacypolicy/index">Privacy Policy</a><br/>
                     <div class="col col-social-icons">
                         <h4>Follow us</h4>
                         <a href="#"><i class="fa fa-facebook"></i></a>
