--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,8 @@
 
         <!--  image_tag "full-bg-7.png", :html => { :class => 'ls-bg' } %> -->
 
-        <img src="/images/backgrounds/full-bg-9.jpg" class="ls-bg" alt="Slide background"/>
+        <%= image_tag 'full-bg-9.jpg', :class => "ls-bg" %>
+        
         
         <!-- Right Image -->
         <img src="/images/giftcards_main.jpg" class="ls-l" style="top:50%; left:70%;" alt="Image layer">
