--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,7 +57,9 @@
                 </style>
 
                 <a class="navbar-brand" href="/home" title="Boomerang | One template. Infinite solutions">
-                    <img src="/images/ChangefinderLogo-blue.png"  alt="Changefindr">
+
+                    <%= image_tag 'ChangefinderLogo-blue.png' %>
+                    
                    
                 </a>
             </div>
@@ -146,4 +148,6 @@
     </div>
 </header>        
 </div>
+
+
 
