changed the images back to public since using amazon cdn

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -58,7 +58,7 @@
 
                 <a class="navbar-brand" href="/home" title="Boomerang | One template. Infinite solutions">
 
-                    <%= image_tag 'ChangefinderLogo-blue.png' %>
+                    <img src="/images/ChangefinderLogo-blue.png"  alt="Changefindr">
                     
                    
                 </a>
