--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,11 +8,10 @@
 
         <!--  image_tag "full-bg-7.png", :html => { :class => 'ls-bg' } %> -->
 
-        <%= image_tag 'full-bg-9.jpg', :class => "ls-bg" %>
-        
+        <img src="/images/backgrounds/full-bg-9.jpg" class="ls-bg" alt="Slide background"/>
         
         <!-- Right Image -->
-        <%= image_tag 'giftcards_main.jpg', :class => "ls-bg img-responsive", :style => "left:20%;" %>
+        <img src="/images/giftcards_main.jpg" class="ls-l" style="top:50%; left:70%;" alt="Image layer">
 
         
         
