--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -10,7 +10,7 @@
                                 <div class="product-gallery">
                                     <div class="primary-image">
                                         <a href="<%=@cause.logo.url%>" class="theater" rel="group">
-                                            <img src="<%=@cause.logo.url%>" class="img-responsive" alt="">
+                                            <img src="<%=@cause.logo.url%>" class="img-responsive center-block" alt="">
                                         </a>
                                     </div>
                                    
@@ -29,19 +29,19 @@
 
                                         <% if @cause.image1.exists? %>
                                             <div class="item item-dark active">
-                                                <img src="<%=@cause.image1.url%>" style="max-height:350px;min-height:350px" alt="" class="img-responsive">
+                                                <img src="<%=@cause.image1.url%>" style="max-height:350px;min-height:350px" alt="" class="img-responsive center-block">
                                             </div>
                                         <% end %>
 
                                         <% if @cause.image2.exists? %>
                                             <div class="item item-dark">
-                                                <img src="<%=@cause.image2.url%>" style="max-height:350px;min-height:350px" alt="" class="img-responsive">
+                                                <img src="<%=@cause.image2.url%>" style="max-height:350px;min-height:350px" alt="" class="img-responsive center-block">
                                             </div>
                                         <% end %>
 
                                         <% if @cause.image3.exists? %>
                                             <div class="item item-dark">
-                                                <img src="<%=@cause.image3.url%>" style="max-height:350px;min-height:350px" alt="" class="img-responsive">
+                                                <img src="<%=@cause.image3.url%>" style="max-height:350px;min-height:350px" alt="" class="img-responsive center-block">
                                             </div>
                                         <% end %>
 
