completed registration emails and verification

--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -1,4 +1,5 @@
   <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-1.jpg);">
+  <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-1.jpg);">
         <div class="wp-section">
             <div class="container">
                 <div class="row">
@@ -8,7 +9,7 @@
                                 <h2>Sign in to your account</h2>
                             </div>
                             <div class="form-body">
-                                <form action="sign_in/login" id="frmLogin" class="sky-form">                                    
+                                <form action="/sign_in/login" id="frmLogin" class="sky-form">                                    
                                     <fieldset>                  
                                         <section>
                                             <div class="form-group">
