completed forgot password link

--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -55,7 +55,7 @@
                             </div>
                                 
                             <div class="form-footer">
-                                <p>Lost your password? <a href="#">Click here to recover.</a></p>
+                                <p>Lost your password? <a href="/sign_in/recoverpassword">Click here to recover.</a></p>
                             </div>
                         </div>
                     </div>
