--- a/app/views/user_mailer/resetpassword_email.html.erb
+++ b/app/views/user_mailer/resetpassword_email.html.erb
@@ -2,6 +2,7 @@
    host = "https://changefindr.heroku.com/"
 %>
 
+
 <!-- fulltext -->
 <table width="100%" bgcolor="#d8d8d8" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" st-sortable="left-image">
    <tbody>
@@ -44,12 +45,13 @@
                                                 Thank you for registering with Changefindr.
                                                 <br/>
                                                 Your username is <%= @user.email %>.  <br/>
-                                                Please confirm your registration by clicking
-                                                <a href="<%= host %>sign_up/verifyregistration/<%= @user.verifysalt %>">HERE</a>
+                                                Please reset your password by clicking on this link
+                                                <a href="<%= host %>sign_in/resetpassword/<%= @user.passwordresetsalt %>">HERE</a>
                                                 <br />
-                                                Once registration is confirmed, you may login at <a href="<%= host %>">Changefindr</a> to
+                                                Once your password is reset, you may login at <a href="<%= host %>">Changefindr</a> to
                                                  
                                                 <br/>
+
                                                 <ul>
                                                   <li>Check your gift card balance in real time </li>
                                                   <li>Donate your unused gift card balance to your favorite cause</li>
