completed merchant autocomplete on home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,9 @@
                                                 <i class="icon-append fa fa-credit-card"></i>
                                                 <input type="text" name="giftcard" 
                                                 placeholder="Check Your Gift Card Balance"
-                                                style="font-size:large">
+                                                name="searchmerchant"
+                                                id="searchmerchant"
+                                                style="font-size:x-large">
                                             </label>
                                         </div>     
                                     </section>
@@ -252,7 +254,7 @@
         <div class="wp-section">
             <div class="container">
                 <div class="section-title-wr">
-                    <h3 class="section-title left"><span>Merchants</span></h3>
+                    <h3 class="section-title left"><span>Gift Cards</span></h3>
                 </div>
                 
                 <div id="carouselWork2" class="carousel carousel-3 slide animate-hover-slide">
@@ -378,29 +380,29 @@
                 </div>
                 <div class="row">
                     
-                    <div class="col-md-3 col-sm-3 col-xs-3 visible-lg visible-md">
+                    <div class="col-md-3 visible-lg visible-md">
                         
                     </div>
 
-                    <div class="col-md-3 col-sm-3 col-xs-3">
+                    <div class="col-md-3">
                         <div class="client">
                             <a href="http://www.faststartstudio.com/" target="_blank">
-                                <img src="/images/faststart_logo.png" alt="">
+                                <img src="/images/faststart_logo.png" class="img-responsive" alt="">
                             </a>
                         </div>
                     </div>
                    
                   
 
-                     <div class="col-md-3 col-sm-3 col-xs-3">
+                     <div class="col-md-3">
                         <div class="client">
                             <a href="http://fi.co/" target="_blank">
-                                <img src="/images/FI_logo.png" alt="">
+                                <img src="/images/FI_logo.png" class="img-responsive" alt="">
                             </a>
                         </div>
                     </div>
 
-                     <div class="col-md-3 col-sm-3 col-xs-3 visible-lg visible-md">
+                     <div class="col-md-3 visible-lg visible-md">
                         
                     </div>
                     
