--- a/app/views/cause/index.html.erb
+++ b/app/views/cause/index.html.erb
@@ -57,7 +57,7 @@
                                 <div class="row">
                                     <div class="col-xs-9 center-block" style="text-align:center">
                                         <h2><%= cause.charityname %></h2>
-                                        <% if session[:roleid] == 1 || session[:userid] == :userid%>
+                                        <% if session[:roleid] == ADMIN_ROLE || session[:userid] == :userid%>
                                             <%= link_to "Edit", controller: "cause", action: "edit", id: cause.charityid %>
                                         <% end %>
                                     </div>
