added my name and pic to team

--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -52,14 +52,14 @@
 			                    </div>
                 			</div>
                 		</div>
-                		<h3 class="title-lg">Mike B.</h3>
+                		<h3 class="title-lg">Vipul Bhavsar</h3>
                 		<p>
-                			Mike has experience as the software architect and lead programmer for a large IT Company. Prior to this he has been the senior software developer and architect for eXcelon corporations. He has also worked as a consultant on various programming projects for the US Navy and Tibco. Mike has a Bachelor’s from the University of California and a Masters from USC, both in Computer Science. He is also a Project Management Professional (PMP).
+                			Vipul has experience as the software architect and lead programmer for a large IT Company. Prior to this he has been the senior software developer and architect for eXcelon corporations. He has also worked as a consultant on various programming projects for the US Navy and Tibco. Vipul has a Bachelor’s from the University of California and a Masters from USC, both in Computer Science. He is also a Project Management Professional (PMP).
                 		</p>
                 		
                 	</div>
                 	<div class="col-md-3">
-                		<img src="/images/prv/team/team-agency-4.jpg" class="img-responsive" style="max-height:309px" alt="">
+                		<img src="/images/VipulProfilePic.jpg" class="img-responsive" style="max-height:309px" alt="">
                 	</div>
                 </div>
                 <hr>
